# RustProject

./: README.md
cargo_workspace/: Cargo.toml
cargo_workspace/add_one/src/: lib.rs
cargo_workspace/adder/: Cargo.toml
cargo_workspace/adder/src/: main.rs
cargo_workspace/times_two/: Cargo.toml
cargo_workspace/times_two/src/: lib.rs
hello/: 404.html  README.md  hello.html
hello/src/: lib.rs  main.rs
loggers/: Cargo.toml  README.md  log4rs.toml
loggers/src/: main.rs
loggers/tests/: rolling_test.rs
rusqlite_db/: Cargo.toml  obc.db
rusqlite_db/src/: main.rs
sample_scheduler/: Cargo.toml  README.md  log4rs.toml
sample_scheduler/src/: log.rs  main.rs  message.rs  schedule_message.rs  scheduler.rs
web_server/: 404.html
