[package]
name = "loggers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = { version = "1.2", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller", "toml_format"] }
